# bombadil

./: .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.MD  CLAUDE.md  DATASHEETS.md  README.md  UI.md  connection_validation_report_local.md  main.py  pyproject.toml  ruff.toml
.claude/agents/: datasheet-ingester.md
_local_scripts/altium_project_parser/: Mothernode Control Board.json  project_parser_test.py  schema_regex_testing.py
_local_scripts/controller/: connection_validator_test.py
_local_scripts/datasheet_converter/: peripheral_creator_test.py  peripheral_package_specific.py  save.json
_local_scripts/datasheet_converter_ls/: datasheet_output_formats.py  json_salvager_test.py
_local_scripts/jsonformer/: datasheet.md  jsonformer_test.py
_local_scripts/linear/: linear_issue_creator_vsn.py  vsn.json
_local_scripts/micro_pinout/: micro_test.py  pad_ui_test.py
_local_scripts/register_map/: register_map_test.py  tp92520.json
docs/: connection_validator.md
galvanic/: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
galvanic/.github/: ISSUE_TEMPLATE.md
galvanic/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
galvanic/tests/: __init__.py  test_galvanic.py
scripts/altium_project_parser/: Ethernet PCBA.json  Mothernode Control Board.json  Sensor Node.json  Sensor Node_signals.json  Skynode Power Module.json  basic_tester.py  project_parser_test.py  project_save_test.py  schema_regex_testing.py
scripts/controller/: connection_validator_test.py
(+343 files in other folders)
