[project]
name = "galvanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "google>=3.0.0",
    "google-genai>=1.31.0",
    "pymupdf4llm>=0.0.27",
    "pyside6>=6.9.1",
    "requests>=2.32.5",
]
