[project]
name = "bombadil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.76.0",
    "colorama>=0.4.6",
    "google>=3.0.0",
    "google-genai>=1.60.0",
    "linear-api>=0.2.0",
    "pymupdf4llm>=0.2.9",
    "pyside6>=6.9.1",
]
